[gd_scene format=3 uid="uid://biwbe3k6jqo70"]

[ext_resource type="Script" uid="uid://d1ro2xl63ftjv" path="res://ec_assets/objects/ylem.gd" id="1"]
[ext_resource type="Material" uid="uid://d0gel3gux24hq" path="res://ec_assets/additive.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://3xrsmq2oyw6a" path="res://ec_assets/textures/particles/neutron.png" id="3"]
[ext_resource type="SpriteFrames" uid="uid://bit7ybgb1ps46" path="res://ec_assets/textures/element_eyes.tres" id="4"]
[ext_resource type="AudioStream" uid="uid://c0urryb7eujbj" path="res://ec_assets/sounds/placeparticle.mp3" id="5"]
[ext_resource type="FontFile" uid="uid://cqb672ltyq5wd" path="res://ec_assets/fonts/PIXEARG_.TTF" id="5_ja753"]
[ext_resource type="Script" uid="uid://b0p6w8lkui4s1" path="res://ec_assets/objects/sound_effect.gd" id="6"]
[ext_resource type="Script" uid="uid://dya55vroy053d" path="res://ec_assets/objects/exp_tooltip.gd" id="7"]

[sub_resource type="Gradient" id="Gradient_5uyda"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cjbkr"]
gradient = SubResource("Gradient_5uyda")
width = 35
height = 7
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_u3fx3"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30pp0"]
size = Vector2(30, 40)

[sub_resource type="Gradient" id="Gradient_f2wvs"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lcrh8"]
gradient = SubResource("Gradient_f2wvs")
width = 50
height = 25
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_kkxkn"]
radius = 32.0

[node name="ylem" type="CharacterBody2D" unique_id=207899427]
input_pickable = true
script = ExtResource("1")

[node name="glow" type="CPUParticles2D" parent="." unique_id=1086068178]
modulate = Color(1, 0.972549, 0.905882, 1)
z_index = -1
texture_filter = 2
material = ExtResource("2")
amount = 10
texture = SubResource("GradientTexture2D_cjbkr")
lifetime = 2.0
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 20.0
color_ramp = SubResource("Gradient_u3fx3")

[node name="nucleus" type="Node2D" parent="." unique_id=308732929]

[node name="body" type="Sprite2D" parent="nucleus" unique_id=1441661991]
modulate = Color(1, 0.972549, 0.905882, 1)
material = ExtResource("2")
texture = ExtResource("3")

[node name="face" type="Node2D" parent="nucleus" unique_id=1912133137]
modulate = Color(0, 0, 0, 1)

[node name="eye1" type="AnimatedSprite2D" parent="nucleus/face" unique_id=590781442]
position = Vector2(-10, 4)
sprite_frames = ExtResource("4")
frame = 1

[node name="eye2" type="AnimatedSprite2D" parent="nucleus/face" unique_id=248310012]
position = Vector2(10, 4)
sprite_frames = ExtResource("4")
frame = 1
flip_h = true

[node name="col_head" type="CollisionShape2D" parent="." unique_id=117872973]
rotation = 1.5708
shape = SubResource("RectangleShape2D_30pp0")
debug_color = Color(1, 1, 1, 0)

[node name="info" type="Node2D" parent="." unique_id=389589756]

[node name="bg" type="Sprite2D" parent="info" unique_id=1717636278]
texture_filter = 2
position = Vector2(0, -38)
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_lcrh8")

[node name="name" type="Label" parent="info" unique_id=2142776733]
texture_filter = 2
offset_left = -64.0
offset_top = -80.0
offset_right = 192.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("5_ja753")
theme_override_font_sizes/font_size = 32
text = "Ylem"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="type" type="Label" parent="info" unique_id=1237674304]
texture_filter = 2
offset_left = -64.0
offset_top = -48.0
offset_right = 192.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("5_ja753")
theme_override_font_sizes/font_size = 16
text = "exotic matter"
horizontal_alignment = 1
vertical_alignment = 2

[node name="spawnsnd" type="AudioStreamPlayer2D" parent="." unique_id=963092957]
stream = ExtResource("5")
volume_db = 5.0
pitch_scale = 0.25
autoplay = true
script = ExtResource("6")

[node name="Area2D" type="Area2D" parent="." unique_id=472965695]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=331704139]
shape = SubResource("CircleShape2D_kkxkn")

[node name="desc" type="Label" parent="." unique_id=708803385]
process_mode = 3
offset_left = -24.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 16.0
tooltip_text = "Ylem is what physicists George Gamow and Ralph Alpher called the theoretical ultra-dense state of matter
that existed in the first moments after the beginning of the Universe.
A teaspoon of ylem would contain more mass than a galaxy.
Modern science struggles to describe matter of such insane density."
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_ja753")
script = ExtResource("7")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
